# docs/swagger/ContentEndpoints.js
@@ -101,14 +101,19 @@ module.exports = {
     /**
      * @swagger
      *
-     * List Documents
+     * This endpoint enables you to retrieve a list of sub-folders and sub-documents
+     * of a specific path in your content tree.
      *
      * @id listDocuments
      * @tag Content
      *
-     * @summary List documents
+     * @summary List folders and documents
      *
-     * @response 200 {object} the list of documents and folders
+     * @param Authorization {string} (header) Basic authorization header for user in the `restapi` group or `admin` user
+     * @param path {string} (query) the path to retrieve child document information for
+     * @param fetch {?string[]} (query) partial paths to items in the payload that must be <a href="https://marnixkok.nl/news/bloomreach-xm-tutorials/prefetching-content-from-bloomreach-xm-using-xin-mods" target="_blank">prefetched</a>.
+     *
+     * @response 200 {ListDocumentsResponse} the list of documents and folders
      *
      * @param req
      * @param resp
@@ -118,14 +123,19 @@ module.exports = {
     /**
      * @swagger
      *
-     * UUID to path
+     * This endpoint is able to convert a UUID to the Path at which the document
+     * with that UUID lives in the JCR. It will also return other useful metadata.
      *
      * @id uuidToPath
      * @tag Content
      *
-     * @summary UUID to path
+     * @summary UUID to path converter
      *
-     * @response 200 {object} the list of documents and folders
+     * @param Authorization {string} (header) Basic authorization header for user in the `restapi` group or `admin` user
+     * @param uuid {string} (query) the UUID to convert to its path equivalent
+     *
+     * @response 200 {UuidToPathResponse} the list of documents and folders
+     * @response 403 {string} Sent when the credentials are invalid.
      *
      * @param req
      * @param resp
@@ -135,14 +145,18 @@ module.exports = {
     /**
      * @swagger
      *
-     * UUID to path
+     * This endpoint is able to convert a document path to the UUID of the document.
+     * It will also return other useful metadata.
      *
      * @id pathToUuid
      * @tag Content
      *
-     * @summary Path To UUID
+     * @summary Path To UUID Converter
      *
-     * @response 200 {object} the list of documents and folders
+     * @param Authorization {string} (header) Basic authorization header for user in the `restapi` group or `admin` user
+     * @param path {string} (query) the path of the document to retrieve a UUID for.
+     *
+     * @response 200 {PathToUuidResponse} the list of documents and folders
      *
      * @param req
      * @param resp
